--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,9 +6,16 @@ body {
     padding: 3%;
 }
 
+h2 {
+    font-size: 200%;
+}
+
 #mainContainer {
     display: flex;
     justify-content: center;
+    /* border-bottom: 1px solid #d6d6d6;
+    padding-bottom: 70px; */
+    margin-bottom: 50px;
 }
 
 #row1, #row2, #row3 {
@@ -26,23 +33,24 @@ body {
   }
 
 .cta {
-    padding: 5px 10px;
+    padding: 8px 10px;
     font-size: 170%;
     font-weight: 800;
-    margin: 30px;
+    margin: 20px 0px;
     max-width: 60%;
     text-align: center;
-    border-radius: 30px;
+    border-radius: 10px;
     color: white;
+    position: relative;
 }
 
 .cta:hover{
-    opacity: 0.7;
     cursor: pointer;
 }
 
+
 .yellow {
-    background: rgb(240, 204, 3);
+    background: rgb(255, 222, 35);
 }
 
 .blue {
@@ -55,4 +63,64 @@ body {
 
 .green {
     background: rgb(0, 224, 154);
+}
+
+.active {
+    background: #3cff3c;
+    position: absolute;
+    right: -3%;
+    height: 100%;
+    width: 20%;
+    top: 0;
+    z-index: -1;
+    border-radius: 10px;
+    bottom: 0;
+}
+
+.non-active {
+    background: #ff119c;
+    position: absolute;
+    right: -3%;
+    height: 100%;
+    width: 20%;
+    top: 0;
+    z-index: -1;
+    border-radius: 10px;
+    bottom: 0;
+}
+
+#logdata {
+    padding: 10px 30px;
+    background: blue;
+}
+
+#logdata:hover {
+    padding: 10px 30px;
+    background: orange;
+    cursor: pointer;
+}
+
+.sub-container {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 200px;
+}
+
+.sensor-data {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.child-div.temp {
+    font-size: 440%;
+    font-weight: 600;
+}
+
+.child-div.hum {
+    font-size: 250%;
+    font-weight: 100;
 }
