--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,25 +1,42 @@
 * {
-    font-family: Helvetica, Arial, Sans-Serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
-    padding: 3%;
+    padding: 5%;
+    background-color: rgb(10, 0, 37);
 }
 
 h2 {
     font-size: 200%;
+    color: #0b189a;
+    border-bottom: 0.5px solid #0b189a;
 }
+
+.blink_me {
+    animation: blinker 1s linear infinite;
+    position: absolute;
+    margin-left: 0;
+    margin-right: 0;
+    font-size: 800%;
+    border-bottom: none;
+}
+
+@keyframes blinker {
+    50% {
+      opacity: 0;
+    }
+  }
 
 #mainContainer {
     display: flex;
     justify-content: center;
-    /* border-bottom: 1px solid #d6d6d6;
-    padding-bottom: 70px; */
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 }
 
 #row1, #row2, #row3 {
     width: 30%;
+    margin-left: auto;
 }
 
 @media screen and (max-width: 992px) {
@@ -30,62 +47,52 @@ h2 {
     #row1, #row2, #row3 {
         width: 80%;
     }
-  }
+}
 
 .cta {
     padding: 8px 10px;
     font-size: 170%;
     font-weight: 800;
-    margin: 20px 0px;
+    margin: 20px auto;
     max-width: 60%;
     text-align: center;
     border-radius: 10px;
     color: white;
     position: relative;
+    background: rgb(0, 42, 228);
+    transition: 0.3s ease-in-out;
+    text-transform: capitalize;
 }
 
 .cta:hover{
     cursor: pointer;
+    padding-left: 4px;
+    transition: 0.2s ease-in-out;
+    color: #000268;
 }
 
-
-.yellow {
-    background: rgb(255, 222, 35);
-}
-
-.blue {
-    background: rgb(37, 77, 255);
-}
-
-.red {
-    background: rgb(226, 0, 76);
-}
-
-.green {
-    background: rgb(0, 224, 154);
-}
 
 .active {
-    background: #3cff3c;
+    background: #12ffe1;
     position: absolute;
     right: -3%;
     height: 100%;
     width: 20%;
     top: 0;
     z-index: -1;
-    border-radius: 10px;
+    border-radius: 30px;
     bottom: 0;
 }
 
 .non-active {
-    background: #ff119c;
+    background: #ea0101;
     position: absolute;
     right: -3%;
     height: 100%;
     width: 20%;
     top: 0;
     z-index: -1;
-    border-radius: 10px;
+    border-radius: 30px;
     bottom: 0;
 }
 
@@ -113,14 +120,17 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding-left: 8%;
 }
 
 .child-div.temp {
-    font-size: 440%;
+    font-size: 500%;
     font-weight: 600;
+    color: rgb(0, 42, 228);
 }
 
 .child-div.hum {
     font-size: 250%;
     font-weight: 100;
+    color:#ea0101;
 }
